--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <link rel = "stylesheet" href="./style.css"/>
 </head>
 <body>
-    <img src="./assets/images/profile-photo.png" alt="profile picture" height="100"/>
-    <h1>Alexander J. Slivka</h1>
-    <a href="./public/about-me.html">About Me</a>
+    <div class="profile-container">
+        <img src="./assets/images/profile-photo.png" alt="profile photo" height="100"/>
+        <h1>Alexander J. Slivka</h1>
+        <a href="./public/about-me.html">About Me</a>
+    </div>
     <hr />
     <h2>Employment</h2>
     <p>
