Update hyperlink color

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     </p>
     <h2>Certifications</h2>
     <p>
-        <a href="https://credly.com/badges/6d5b6241-9476-40fa-a45c-ae020935db3c">SAP Certified Associate - Back-End Developer ABAP Cloud</a><br />
-        <a href="https://www.credly.com/badges/925f1b5d-452d-43af-8478-260ab6c6212b/print">Certified SAFe 6 Agilist</a><br />
+        <a class="hyperlink" href="https://credly.com/badges/6d5b6241-9476-40fa-a45c-ae020935db3c">SAP Certified Associate - Back-End Developer ABAP Cloud</a><br />
+        <a class="hyperlink" href="https://www.credly.com/badges/925f1b5d-452d-43af-8478-260ab6c6212b/print">Certified SAFe 6 Agilist</a><br />
     </p>
     <h2>Skills Summary</h2>
     <p>
