Update hyperlink color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="profile-container">
         <img src="./assets/images/profile-photo.png" alt="profile photo" height="100"/>
         <h1>Alexander J. Slivka</h1>
-        <a href="./public/about-me.html">About Me</a>
+        <a class="hyperlink" href="./public/about-me.html">About Me</a>
     </div>
     <hr />
     <h2>Employment</h2>
